syntax = "proto3";

package zitadel.feature.v2beta;

import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

import "zitadel/object/v2beta/object.proto";
import "zitadel/feature/v2beta/feature.proto";

option go_package = "github.com/zitadel/zitadel/pkg/grpc/feature/v2beta;feature";

message SetInstanceFeaturesRequest{
  optional bool login_default_org = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "true";
      description: "The login UI will use the settings of the default org (and not from the instance) if no organization context is set";
    }
  ];
  optional bool oidc_trigger_introspection_projections = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "true";
      description: "Enable projection triggers during an introspection request. This can act as workaround if there are noticable consistency issues in the introspection repsonse but can have an impact on performance. We are planning to remove triggers for introspection requests in the future. Please raise an issue if you needed to enable this feature.";
    }
  ];

  optional bool oidc_legacy_introspection = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "true";
      description: "We have recently refactored the introspection endpoint for performance reasons. This feature can be used to rollback to the legacy implementation if unexpected bugs arrise. Please raise an issue if you needed to enable this feature.";
    }
  ];
}

message SetInstanceFeaturesResponse {
  zitadel.object.v2beta.Details details = 1;
}

message ResetInstanceFeaturesRequest {}

message ResetInstanceFeaturesResponse {
  zitadel.object.v2beta.Details details = 1;
}

message GetInstanceFeaturesRequest {
  bool inheritance = 1 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "true";
      description: "Inherit unset features from the resource owners. This option is recursive: if the flag is set, the resource's ancestors are consulted up to system defaults. If this option is disabled and the feature is not set on the instance, it will be ommitted from the response or Not Found is returned when the instance has no features flags at all.";
    }
  ];
}

message GetInstanceFeaturesResponse {
  zitadel.object.v2beta.Details details = 1;
  FeatureFlag login_default_org = 2 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "true";
      description: "The login UI will use the settings of the default org (and not from the instance) if no organization context is set";
    }
  ];

  FeatureFlag oidc_trigger_introspection_projections = 3 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "true";
      description: "Enable projection triggers during an introspection request. This can act as workaround if there are noticable consistency issues in the introspection repsonse but can have an impact on performance. We are planning to remove triggers for introspection requests in the future. Please raise an issue if you needed to enable this feature.";
    }
  ];

  FeatureFlag oidc_legacy_introspection = 4 [
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      example: "true";
      description: "We have recently refactored the introspection endpoint for performance reasons. This feature can be used to rollback to the legacy implementation if unexpected bugs arrise. Please raise an issue if you needed to enable this feature.";
    }
  ];
}
